Update to v1.5.139+flatpak-1

--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -24,19 +24,19 @@ modules:
         . /usr/lib/sdk/golang/enable.sh
         export ADVZIP=:  # Not available on Flatpak SDK.
         GOTOOLCHAIN=local AAAAXY_BUILD_USE_VERSION_FILE=true make BUILDTYPE=release BINARY=/app/bin/aaaaxy
-        mkdir -p /app/share/icons/hicolor/128x128/apps
-        cp aaaaxy.png /app/share/icons/hicolor/128x128/apps/io.github.divverent.aaaaxy.png
+        mkdir -p /app/share/icons/hicolor/scalable/apps
+        cp aaaaxy.svg /app/share/icons/hicolor/scalable/apps/io.github.divverent.aaaaxy.png
         mkdir -p /app/share/applications
         sed -e 's,Icon=aaaaxy,Icon=io.github.divverent.aaaaxy,' < aaaaxy.desktop > /app/share/applications/io.github.divverent.aaaaxy.desktop
         mkdir -p /app/share/metainfo
-        sed -e 's,aaaaxy\.png,io.github.divverent.aaaaxy.png,; s,aaaaxy\.desktop,io.github.divverent.aaaaxy.desktop,g' < io.github.divverent.aaaaxy.metainfo.xml > /app/share/metainfo/io.github.divverent.aaaaxy.appdata.xml
+        sed -e 's,aaaaxy\.desktop,io.github.divverent.aaaaxy.desktop,g' < io.github.divverent.aaaaxy.metainfo.xml > /app/share/metainfo/io.github.divverent.aaaaxy.appdata.xml
     sources:
       - type: git
         url: https://github.com/divVerent/aaaaxy
         # --- TAG GOES HERE ---
-        tag: v1.5.139
+        tag: v1.5.139+flatpak-1
         # --- REV GOES HERE ---
-        commit: a6ecd5a1de8f283476a2a1ba73ab0c8f789aaac1
+        commit: 918b1f1e89d5a091053215700a0d7481bc6b108c
       - type: file
         path: modules.txt
         dest: vendor
